--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>my home</title>
-</head>
-<body>
-    <div>
-        <p>主页</p>
-    </div>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,user-scalable=no"><meta name=apple-mobile-web-app-status-bar-style content=black-translucent><meta content="telephone=no" name=format-detection><meta content="email=no" name=format-detection><meta name=screen-orientation content=portrait><meta name=full-screen content=yes><meta name=browsermode content=application><meta name=x5-orientation content=portrait><meta name=x5-fullscreen content=true><meta name=x5-page-mode content=app><meta name=HandheldFriendly content=true><meta name=MobileOptimized content=320><meta content=yes name=apple-mobile-web-app-capable><meta content=yes name=apple-touch-fullscreen><meta content="telephone=no,email=no" name=format-detection><meta name=App-Config content="fullscreen=yes,useHistoryState=yes,transition=yes"><title>ap_pc_project</title><link href=/static/css/app.9fc337a23b54eba6c47163d8db1b5b30.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.1e36a56557a41d003125.js></script><script type=text/javascript src=/static/js/vendor.bd3d8a7ef69e0030fce2.js></script><script type=text/javascript src=/static/js/app.972b1b132edf4949f530.js></script></body></html>
