--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <noscript><strong>We're sorry but ap-ui doesn't work properly without JavaScript enabled. Please enable it to
             continue.</strong>
     </noscript>
-    <a href="./dist/index.html">跳转</a>
+    <a href="./notes/index.html">跳转</a>
     <div id=app></div>
     <script src=/js/chunk-vendors.4dfd6de5.js> </script> 
     <script src=/js/app.38711dd9.js></script> 
