--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>appleHome-ui</title><link href=/css/Button.50c633bd.css rel=prefetch><link href=/css/Icon.aef4ac54.css rel=prefetch><link href=/css/Message.50c633bd.css rel=prefetch><link href=/css/Notification.50c633bd.css rel=prefetch><link href=/js/Button.3c5404de.js rel=prefetch><link href=/js/Icon.340f70bb.js rel=prefetch><link href=/js/Message.559526e7.js rel=prefetch><link href=/js/Notification.46d8a539.js rel=prefetch><link href=/css/app.ff61d5ce.css rel=preload as=style><link href=/css/chunk-vendors.05d3657a.css rel=preload as=style><link href=/js/app.f28258c1.js rel=preload as=script><link href=/js/chunk-vendors.4dfd6de5.js rel=preload as=script><link href=/css/chunk-vendors.05d3657a.css rel=stylesheet><link href=/css/app.ff61d5ce.css rel=stylesheet></head><body><noscript><strong>We're sorry but ap-ui doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.4dfd6de5.js></script><script src=/js/app.f28258c1.js></script></body></html>
+<meta charset="utf-8">
+<title>index demo</title>
+<script src="./index.umd.js"></script>
+
+<link rel="stylesheet" href="./index.css">
+
+
+<script>
+console.log(index)
+</script>
