--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<meta charset="utf-8">
-<title>index demo</title>
-<script src="./index.umd.js"></script>
-
-<link rel="stylesheet" href="./index.css">
-
-
-<script>
-console.log(index)
-</script>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>appleHome-ui</title><link href=/css/Icon.03b9ab81.css rel=prefetch><link href=/js/Button.77226f10.js rel=prefetch><link href=/js/DatePicker.0f54aeb3.js rel=prefetch><link href=/js/Icon.49f6545f.js rel=prefetch><link href=/js/Message.8dbb656c.js rel=prefetch><link href=/js/Notification.65351197.js rel=prefetch><link href=/css/app.d5080e56.css rel=preload as=style><link href=/css/chunk-vendors.e5088ab6.css rel=preload as=style><link href=/js/app.7e61800c.js rel=preload as=script><link href=/js/chunk-vendors.bb6d1b8f.js rel=preload as=script><link href=/css/chunk-vendors.e5088ab6.css rel=stylesheet><link href=/css/app.d5080e56.css rel=stylesheet></head><body><noscript><strong>We're sorry but ap-ui doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.bb6d1b8f.js></script><script src=/js/app.7e61800c.js></script></body></html>
